@@ -1,3 +1,12 @@
+2024-12-08 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* device/lib/f8/_modsint.s,
+	  device/lib/f8/_moduint.s,
+	  device/lib/f8/Makefile.in,
+	  device/lib/f8/_divsint.s,
+	  device/lib/f8/_divuint.s:
+	  Improve f8 modulo support routines.
+
 2024-12-07 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/f8/gen.c:
